- dependency on guava is removed